# atomic

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.json  DESIGN.md  DEV_SETUP.md  PRODUCT.md  README.md  SECURITY.md  bunfig.toml  cursor-pr1753-other-findings.md  issues.md  package-lock.json  package.json  prek.toml  skills-lock.json  tsconfig.json  verdaccio.yaml
.atomic/workflows/: publish-release.ts  release-docs.ts
.claude/agents/: codebase-analyzer.md  codebase-locator.md  codebase-online-researcher.md  codebase-pattern-finder.md  codebase-research-analyzer.md  codebase-research-locator.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.opencode/: opencode.json
docs/: ci.md  workflow-playbook.md
evals/: README.md  atomic_harbor.py  atomic_pier.py  prerequisites.py  pyproject.toml  skill_prerequisites.py
evals/tests/: test_prerequisites.py
examples/: hello-world.ts  model-fallback.ts  parallel-fan-out.ts
patches/: @earendil-works%2Fpi-tui@0.78.0.patch
scripts/: build-binaries.sh  bump-version.ts  cut-release.ts  generate-coding-agent-shrinkwrap.d.mts  generate-coding-agent-shrinkwrap.mjs  install-hooks.mjs  release-base.ts  run-flaky-test-suite.ts  verify-publish-context.ts  verify-release-integrity.ts
specs/: 2026-03-02-playwright-cli-integration.md  2026-03-18-atomic-v2-rebuild.md  2026-03-28-devcontainer-features-ghcr-publishing.md  2026-04-17-open-claude-design.md  2026-05-07-custom-workflows-settings-json.md  2026-05-08-deep-research-codebase-codegraph-migration.md  2026-05-11-atomic-pi-coding-agent-rewrite.md  2026-05-11-pi-workflows-extension.md  2026-05-14-workflow-sdk-fallback-models.md  2026-05-14-workflow-sdk-pi-subagents-api-parity.md  2026-05-27-implement-the-gh-issue-https-github-com-flora131-atomic-issues-1070.md  2026-05-28-fix-issue-1087-builtin-skill-definitions-in-bastani-subagents-are-discovered-in.md  2026-05-30-implement-github-issue-https-github-com-flora131-atomic-issues-1137-in-this-repo.md  2026-06-06-continue-implementation-of-atomic-native-checkpoint-rewind-for-issue-https-githu.md  2026-06-06-continue-implementation-of-issue-https-github-com-bastani-inc-atomic-issues-1243.md  2026-06-06-implement-github-issue-1280-https-github-com-bastani-inc-atomic-issues-1280-titl.md  2026-06-06-implement-github-issue-https-github-com-bastani-inc-atomic-issues-1274-in-this-r.md  2026-06-06-resume-and-finish-prior-ralph-run-b4b93703-84d4-4752-bbf8-76929956c8fb-for-issue.md  2026-06-20-first-run-onboarding-workflow-routing.md  2026-06-21-readme-loop-engine-positioning.md
src/: cli.ts
ui/: attach-mockup.html  dispatch-mockup.html  mockups.html  stage-chat-mockup.html
(+925 files in other folders)
