[project]
name = "evals"
version = "0.0.0"
description = "Atomic internal eval suite package."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datacurve-pier",
]

[tool.uv.sources]
datacurve-pier = { path = "vendor/pier", editable = true }

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
]
